cmake_minimum_required(VERSION 3.23)
project(MiniEngine)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_subdirectory(Engine/ThirdParty/glfw)
add_subdirectory(Engine/ThirdParty/spdlog)
add_subdirectory(Engine/ThirdParty/entt)
add_subdirectory(Engine/ThirdParty/assimp/assimp-5.2.5)
add_subdirectory(Engine/ThirdParty/glm)
include_directories(Engine/ThirdParty/imgui)
include_directories(Engine/ThirdParty/glad/include)
include_directories(Engine/Core)
aux_source_directory(Engine/ThirdParty/imgui imgui)
aux_source_directory(Engine/ThirdParty/stb_image stb_image)
aux_source_directory(Engine/Core core)
add_executable(main main.cpp gl.c ${imgui} ${core} ${stb_image})
target_link_libraries(main PUBLIC glfw spdlog)